# CLaxon

./: .gitignore  CMakeLists.txt  LICENSE  README
data/cnn_convolution/: cnn_convolution.txt  cnn_convolution_kernels.txt  in_large.txt  kernels_large.txt
data/cnn_maxpool/: cnn_maxpool.txt  cnn_maxpool_111x111x96.txt  out.csv
data/cnn_relu/: cnn_relu.txt  cnn_relu_biases.txt  out.csv  out_large.csv
data/frnn/: frnn_points.txt  frnn_stanbun_000.txt
data/kfusion/: depth2vertex_invK.csv  halfSampleRobustImage_in.csv  halfSampleRobustImage_out.csv  track_transformMats.csv
data/mriq/: kvalues.csv  phimag_out.csv  x.csv  y.csv  z.csv
data/ndt/: notice.txt  room_scan1.txt  room_scan2.txt
data/spmv/: dst_vector.csv
include/frnn/: prefix_sum.h
include/lib/: csv.h  opencl.h
src/: cltest.c
src/cnn_convolution/: cnn_convolution.c  cnn_convolution.cl
src/cnn_maxpool/: cnn_maxpool.c  cnn_maxpool.cl
src/cnn_relu/: cnn_relu.c  cnn_relu.cl  cnn_relu_fc.c  cnn_relu_fc.cl
src/fft/: fft.c  fft_kernel.cl
src/frnn/: frnn.c  frnn.cl  prefix_sum.c  prefix_sum.cl
src/kfusion/: kernels.cl  kfusion.c
src/lib/: csv.c  opencl.c
src/mriq/: kernels.cl  macros.h  mriq.c
src/ndt/: ndt.c  ndt.cl
src/spmv/: kernel.cl  spmv.c
src/srad/: kernel_gpu_opencl.cl  main.h  srad.c
src/stencil/: kernel.cl  stencil.c
